<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
            android:id="@+id/results_holder_layout"
            android:layout_width="fill_parent"
            android:layout_height="110dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/result2_textview"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/result1_textview"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/color_picker_layout"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <requestFocus />

            <TextView
                android:id="@+id/color_picker_slider_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/color_picker_slider_text" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingRight="10dp" >

                <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/randomButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="randomColor"
                    android:text="@string/button_random" />

                <Button
                    android:id="@+id/enterHexButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="enterHex"
                    android:text="@string/button_hex" />
            </LinearLayout>
        </LinearLayout>

</LinearLayout>