<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/fragLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/colorFragLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/results_holder_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/result2_textview"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:tag="layout"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/result1_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/color_picker_layout"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/color_picker_slider_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/color_picker_slider_text_short" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="1dp"
                android:paddingRight="1dp" >

                <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/randomButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="randomColor"
                    android:textSize="14sp"
                    android:text="@string/button_random" />

                <Button
                    android:id="@+id/enterHexButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="enterHex"
                    android:textSize="14sp"
                    android:text="@string/button_hex" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>